update errorstatus
