# transaction-server/src/config/swagger.json
@@ -49,7 +49,7 @@
                 "schema": {
                   "example":{
                     "errors": [
-                      "TRANSACTION_TRANSACTION_TYPE_INVALID"
+                      "TRANSACTION_GET_LIST_TYPE_INVALID"
                     ]
                   }
                 }
@@ -138,7 +138,7 @@
                   "example":{
                     "errors": [
                       "TRANSACTION_GET_LIST_ACCOUNT_ID_MANDATORY",
-                      "TRANSACTION_TRANSACTION_TYPE_INVALID"
+                      "TRANSACTION_GET_LIST_TYPE_INVALID"
                     ]
                   }
                 }
