# transaction-server/src/modules/commons/ErrorStatus.ts
@@ -5,5 +5,8 @@ export enum ErrorStatus {
   TRANSACTION_CREATE_REQ_NOT_FOUND = 'TRANSACTION_CREATE_REQ_NOT_FOUND',
 
   TRANSACTION_GET_LIST_ACCOUNT_ID_MANDATORY = 'TRANSACTION_GET_LIST_ACCOUNT_ID_MANDATORY',
-  TRANSACTION_GET_LIST_TRANSACTION_TYPE_INVALID = 'TRANSACTION_TRANSACTION_TYPE_INVALID'
+  TRANSACTION_GET_LIST_TYPE_INVALID = 'TRANSACTION_GET_LIST_TYPE_INVALID',
+
+  TRANSACTION_CREATE_ACCOUNT_ID_MANDATORY = 'TRANSACTION_CREATE_ACCOUNT_ID_MANDATORY',
+  TRANSACTION_CREATE_TYPE_INVALID = 'TRANSACTION_CREATE_TYPE_INVALID',
 }
