# transaction-server/src/modules/transactions/domains/TransactionDomain.ts
@@ -2,6 +2,7 @@ import { TransactionType } from './../../commons/Enum';
 import { ErrorStatus } from '../../commons/ErrorStatus';
 import TransactionCriteriaEntity from '../entities/TransactionCriteriaEntity';
 import * as _ from 'lodash';
+import TransactionEntity from '../entities/TransactionEntity';
 
 export default class TransactionDomain {
   public async validateCriteria(criteria: TransactionCriteriaEntity): Promise<ErrorStatus[]> {
@@ -10,7 +11,7 @@ export default class TransactionDomain {
       errors.push(ErrorStatus.TRANSACTION_GET_LIST_ACCOUNT_ID_MANDATORY);
     }
     if(!(Object.values(TransactionType).includes(criteria?.transactionCode))){
-      errors.push(ErrorStatus.TRANSACTION_GET_LIST_TRANSACTION_TYPE_INVALID);
+      errors.push(ErrorStatus.TRANSACTION_GET_LIST_TYPE_INVALID);
     }
     return errors;
   }
